--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "ethereumjs-tx": "^1.3.3",
     "ethereumjs-util": "^5.1.3",
     "ethereumjs-wallet": "^0.6.0",
+    "metronomejs": "git@github.com:MetronomeToken/metronomejs.git#develop",
     "moment": "^2.20.1",
     "moment-precise-range-plugin": "^1.3.0",
+    "promise-all-props": "^1.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.11",
