--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.11",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "react-transition-group": "^2.2.1",
+    "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
     "safe-buffer": "^5.1.1",
     "socket.io-client": "^2.0.4",
     "styled-components": "^3.0.2",
