--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.20.1",
     "moment-precise-range-plugin": "^1.3.0",
     "promise-all-props": "^1.0.1",
+    "qrcode.react": "^0.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.11",
