--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
+    "reselect": "^3.0.1",
     "safe-buffer": "^5.1.1",
     "socket.io-client": "^2.0.4",
     "styled-components": "^3.0.2",
