--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bignumber.js": "^6.0.0",
     "bip39": "^2.5.0",
     "electron-debug": "^1.5.0",
+    "electron-settings": "^3.1.4",
     "ethereumjs-tx": "^1.3.3",
     "ethereumjs-util": "^5.1.3",
     "ethereumjs-wallet": "^0.6.0",
@@ -31,8 +32,7 @@
     "styled-components": "^3.0.2",
     "web3": "^1.0.0-beta.29"
   },
-  "homepage": "./",
-  "main": "./electron-starter.js",
+  "main": "src/main/initDev.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -43,7 +43,15 @@
   "devDependencies": {
     "electron": "^1.7.11",
     "electron-devtools-installer": "^2.2.3",
+    "electron-rebuild": "^1.7.3",
+    "eslint": "^4.17.0",
     "eslint-config-prettier": "^2.9.0",
-    "prettier": "^1.10.2"
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "lodash": "^4.17.5",
+    "prettier": "^1.10.2",
+    "proxyquire": "^1.8.0"
   }
 }
