--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,3 @@
 {
-  "extends": [
-    "plugin:react/recommended",
-    "prettier",
-    "react-app",
-    "standard" 
-  ]
+  "extends": ["react-app", "plugin:react/recommended", "standard", "prettier"]
 }
