New unique dev script, build and dist scripts, several fixes, new logger, update readme.md, etc. WIP
- Add patch for Ethereum-utils, bad es5 support, waiting for a new release of the package with the fix
- Add support to Electron App for CRA, new project structure and init app process.
- Fix to init of the threads in the new structure.
- Fix CRA environment variables to aim correct usage in the build, distribution and publish tasks
- Create essential scripts for dev, pack, dist and publish tasks
- Add one script to run the whole app in dev mode
- Setup electron-log for better debug information (file and console) https://github.com/megahertz/electron-log
- Setup electron-unhandled: Catch unhandled errors and promise rejections in our app https://github.com/sindresorhus/electron-unhandled, Excellent for Sentry or another bug track tools
- Get ready the Auto-update code but for now is disabled cause we need the define first the artifacts where we want to deploy and track version.
- Update Readme.md

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-# Prevent opening browser when running create-react-app in dev mode
-BROWSER=none
+  REACT_APP_MTN_API_URL="http://api.mtn.bloqrock.net"
+  REACT_APP_MTN_PUBLIC_NODE_URL="ws://parity.bloqrock.net:8546/"
+  REACT_APP_MTN_AUCTION_ADDR="0xd0aa441ccc3926bcc28d586043bed845d9617ce1"
+  REACT_APP_MTN_TOKEN_ADDR="0x2d9a998fa591ef40563dc56bac835d03680f8d23"
+  REACT_APP_WS_AUCTION_STATUS_TOPIC="AUCTION_STATUS_TASK"
+  REACT_APP_SECURE_STORAGE_KEY="seed"
