--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bignumber.js": "^6.0.0",
     "bip39": "^2.5.0",
     "cuid": "^2.0.2",
+    "debug": "^3.1.0",
     "electron-debug": "^1.5.0",
     "electron-settings": "^3.1.4",
     "ethereumjs-tx": "^1.3.3",
