Change win target buld tyo NSIS correct string

--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
       ]
     },
     "win": {
-      "target": "nsis",
+      "target": "NSIS",
       "icon": "dist-assets/icon.ico",
       "legalTrademarks": ""
     }
