--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "metronome-desktop-wallet",
   "version": "0.1.0",
   "private": true,
-  "repository": { 
-    "type": "git", 
-    "url" : "git@github.com:MetronomeToken/metronome-desktop-wallet.git"
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:MetronomeToken/metronome-desktop-wallet.git"
   },
   "dependencies": {
     "axios": "^0.17.1",
     "bignumber.js": "^6.0.0",
     "bip39": "^2.5.0",
+    "coincap-lib": "^1.0.0",
     "cross-env": "^5.1.3",
     "cuid": "^2.0.2",
     "debug": "^3.1.0",
