--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "prepare": "patch-package",
     "electron-pack": "react-scripts build && electron-builder --dir",
     "electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && ELECTRON_START_URL=http://localhost:3000 electron .\"",
+    "electron-debug": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && ELECTRON_START_URL=http://localhost:3000 electron . --inspect\"",
     "electron-dist": "react-scripts build && build --em.main=build/electron.js",
     "electron-release": "react-scripts build && build --em.main=build/electron.js --publish=always",
     "electron-postinstall": "electron-builder install-app-deps"
