Add default ETH price rate default setting

--- a/public/main/defaultSettings.json
+++ b/public/main/defaultSettings.json
@@ -4,5 +4,6 @@
       "websocketApiUrl": "ws://localhost:8546"
     },
     "defaultDerivationPath": "m/44'/60'/0'/0"
-  }
+  },
+  "ethPriceEmitRate": 5
 }
