Fix an move ethPriceEmitRate setting

--- a/public/main/defaultSettings.json
+++ b/public/main/defaultSettings.json
@@ -5,5 +5,7 @@
     },
     "defaultDerivationPath": "m/44'/60'/0'/0"
   },
-  "ethPriceEmitRate": 5
+  "coincap": {
+    "ethPriceEmitRate": 5
+  }
 }
