--- a/.travis.yml
+++ b/.travis.yml
@@ -36,9 +36,9 @@ script:
         -v ~/.cache/electron:/root/.cache/electron \
         -v ~/.cache/electron-builder:/root/.cache/electron-builder \
         electronuserland/builder:wine \
-        /bin/bash -c "npm --link-duplicates --pure-lockfile && electron-release --linux --win"
+        /bin/bash -c "npm --link-duplicates --pure-lockfile && npm run electron-release --linux --win"
     else
-      electron-release
+      npm run electron-release
     fi
 before_cache:
   - rm -rf $HOME/.cache/electron-builder/wine
