--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ethereumjs-tx": "^1.3.3",
     "ethereumjs-util": "^5.1.3",
     "ethereumjs-wallet": "^0.6.0",
+    "human-standard-token-abi": "^1.0.2",
     "lodash": "^4.17.5",
     "metronomejs": "git@github.com:MetronomeToken/metronomejs.git#develop",
     "moment": "^2.20.1",
