--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ script:
         -v ~/.cache/electron:/root/.cache/electron \
         -v ~/.cache/electron-builder:/root/.cache/electron-builder \
         electronuserland/builder:wine \
-        /bin/bash -c "npm run release:docker"
+        /bin/bash -c "npm install && npm run release:docker"
     else
       npm run release
     fi
