Final travis.yml version, win build support

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "git@github.com:MetronomeToken/metronome-desktop-wallet.git"
   },
   "dependencies": {
+    "7zip-bin": "^3.1.0",
     "axios": "^0.17.1",
     "bignumber.js": "^6.0.0",
     "bip39": "^2.5.0",
@@ -25,7 +26,7 @@
     "ethereumjs-wallet": "^0.6.0",
     "human-standard-token-abi": "^1.0.2",
     "lodash": "^4.17.5",
-    "metronomejs": "git@github.com:MetronomeToken/metronomejs.git#develop",
+    "metronomejs": "git+ssh://git@github.com:MetronomeToken/metronomejs.git#develop",
     "moment": "^2.20.1",
     "moment-precise-range-plugin": "^1.3.0",
     "nedb": "^1.8.0",
@@ -91,8 +92,8 @@
       ]
     },
     "win": {
-      "target": "NSIS",
-      "icon": "dist-assets/icon.ico",
+      "target": "portable",
+      "icon": "assets/icon.ico",
       "legalTrademarks": ""
     }
   },
@@ -103,13 +104,11 @@
     "start": "react-scripts start",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "prepare": "patch-package",
     "pack": "react-scripts build && builder --dir",
     "dev": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron .\"",
     "debug": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron . --inspect\"",
     "dist": "react-scripts build && build --em.main=build/electron.js",
     "release": "react-scripts build && build --em.main=build/electron.js --publish=always",
-    "release:docker": "react-scripts build && build --em.main=build/electron.js --publish=always --win --linux",
     "postinstall": "electron-builder install-app-deps"
   },
   "devDependencies": {
@@ -125,7 +124,6 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "patch-package": "^5.0.0",
     "prettier": "^1.10.2",
     "proxyquire": "^1.8.0",
     "wait-on": "^2.1.0"
