--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ matrix:
         - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
 
     - os: linux
+      sudo: true
       services: docker
       language: generic
       env:
@@ -23,6 +24,7 @@ matrix:
         - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
 
 cache:
+  yarn: true
   directories:
   - node_modules
   - $HOME/.cache/electron
@@ -31,9 +33,14 @@ cache:
 before_install:
   - |
     if [ "$TRAVIS_OS_NAME" == "osx" ]; then
-      mkdir -p /tmp/git-lfs && curl -L https://github.com/github/git-lfs/releases/download/v2.3.1/git-lfs-$([ "$TRAVIS_OS_NAME" == "linux" ] && echo "linux" || echo "darwin")-amd64-2.3.1.tar.gz | tar -xz -C /tmp/git-lfs --strip-components 1
-      export PATH="/tmp/git-lfs:$PATH"
+      brew install git-lfs
+    elif [ "$TRAVIS_OS_NAME" == "linux" ]; then
+      sudo apt-get install p7zip-full
     fi
+
+install:
+  - yarn install
+
 before_script:
   - git lfs pull
 
@@ -46,9 +53,9 @@ script:
         -v ~/.cache/electron:/root/.cache/electron \
         -v ~/.cache/electron-builder:/root/.cache/electron-builder \
         electronuserland/builder:wine \
-        /bin/bash -c "npm run release:docker"
+        /bin/bash -c "yarn release --win --linux"
     else
-      npm run release
+      yarn release
     fi
 before_cache:
   - rm -rf $HOME/.cache/electron-builder/wine
