--- a/public/main/defaultSettings.json
+++ b/public/main/defaultSettings.json
@@ -1,7 +1,7 @@
 {
   "app": {
     "node": {
-      "websocketApiUrl": "ws://localhost:8546"
+      "websocketApiUrl": "ws://parity.blockrock.net:8546"
     },
     "defaultDerivationPath": "m/44'/60'/0'/0"
   },
