Add integration to diplay toast notifications

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "react-sizeme": "^2.3.6",
+    "react-toastify": "^3.3.2",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
