leave the icon setup itself by builder-utils

--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     },
     "win": {
       "target": "nsis",
-      "icon": "/assets/icon.ico",
+      "icon": "./assets/icon",
       "legalTrademarks": ""
     }
   },
