--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "dev": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron .\"",
     "debug": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron . --inspect\"",
     "dist": "react-scripts build && build --em.main=build/electron.js",
-    "release": "react-scripts build && build --em.main=build/electron.js --publish=always",
+    "release": "react-scripts build && build --em.main=build/electron.js",
     "postinstall": "electron-builder install-app-deps"
   },
   "devDependencies": {
