--- a/public/main/defaultSettings.json
+++ b/public/main/defaultSettings.json
@@ -3,7 +3,8 @@
     "node": {
       "websocketApiUrl": "ws://parity.bloqrock.net:8546"
     },
-    "defaultDerivationPath": "m/44'/60'/0'/0"
+    "defaultDerivationPath": "m/44'/60'/0'/0",
+    "indexerApiUrl": "http://api.indexer.bloqrock.net"
   },
   "coincap": {
     "ethPriceEmitRate": 5
