Link transaction to explorer and remove unused global envs

--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-REACT_APP_MTN_API_URL="http://api.mtn.bloqrock.net"
-REACT_APP_MTN_PUBLIC_NODE_URL="ws://parity.bloqrock.net:8546/"
-REACT_APP_MTN_AUCTION_ADDR="0x09d140eaa1d5b1bb73899edba931f2cef95be63a"
 REACT_APP_MTN_TOKEN_ADDR="0xde806d6efd432cdee42573760682d99ededc1d89"
-REACT_APP_WS_AUCTION_STATUS_TOPIC="AUCTION_STATUS_TASK"
+REACT_APP_MTN_EXPLORER_URL="http://explorer.mtn.bloqrock.net"
