--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "linux": {
       "artifactName": "${name}_v${version}.${ext}",
       "category": "Utility",
-      "target": ["deb", "rpm"]
+      "target": ["deb"]
     },
     "win": {
       "artifactName": "${name}_v${version}.${ext}",
