--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cross-env": "^5.1.3",
     "cuid": "^2.0.2",
     "debug": "^3.1.0",
+    "dotenv": "^5.0.0",
     "electron-debug": "^1.5.0",
     "electron-log": "^2.2.14",
     "electron-settings": "^3.1.4",
@@ -37,6 +38,8 @@
     "node-notifier": "^5.2.1",
     "promise-all-props": "^1.0.1",
     "qrcode.react": "^0.7.2",
+    "raven": "^2.4.1",
+    "raven-js": "^3.22.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.11",
@@ -60,10 +63,7 @@
   "build": {
     "appId": "com.bloqlabs.metronome",
     "productName": "Metronome Wallet",
-    "files": [
-      "build/**/*",
-      "node_modules/**/*"
-    ],
+    "files": ["build/**/*", "node_modules/**/*"],
     "publish": {
       "provider": "github"
     },
@@ -112,10 +112,13 @@
     "eject": "react-scripts eject",
     "prettier": "prettier --write ./**/*.js",
     "pack": "react-scripts build && builder --dir",
-    "dev": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron .\"",
-    "debug": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron . --inspect\"",
-    "dist": "react-scripts build && build --em.main=build/electron.js",
-    "release": "react-scripts build && build --em.main=build/electron.js --publish always",
+    "dev":
+      "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron .\"",
+    "debug":
+      "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron . --inspect\"",
+    "dist": "/react-scripts build && build --em.main=build/electron.js",
+    "release":
+      "react-scripts build && build --em.main=build/electron.js --publish always",
     "postinstall": "electron-builder install-app-deps"
   },
   "devDependencies": {
@@ -128,6 +131,7 @@
     "eslint": "^4.17.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
