--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
       "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron .\"",
     "debug":
       "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron . --inspect\"",
-    "dist": "/react-scripts build && build --em.main=build/electron.js",
+    "dist": "react-scripts build && build --em.main=build/electron.js",
     "release":
       "react-scripts build && build --em.main=build/electron.js --publish always",
     "postinstall": "electron-builder install-app-deps"
