--- a/package.json
+++ b/package.json
@@ -93,14 +93,19 @@
     "linux": {
       "artifactName": "${name}_v${version}.${ext}",
       "category": "Finance",
-      "target": ["deb"],
+      "target": [
+        "deb"
+      ],
       "icon": "./assets/icon.png"
     },
-    "win": {
+    "nsis": {
       "artifactName": "${name}_v${version}.${ext}",
-      "target": "nsis",
       "icon": "./assets/icon",
       "legalTrademarks": ""
+    },
+    "appx": {
+      "artifactName": "${name}_v${version}.${ext}",
+      "publisherDisplayName": "Bloq"
     }
   },
   "config": {
@@ -114,15 +119,15 @@
     "pack": "react-scripts build && builder --dir",
     "dev": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron .\"",
     "debug": "concurrently \"BROWSER=none npm start\" \"wait-on $npm_package_config_cra_dev_serv && ELECTRON_START_URL=$npm_package_config_cra_dev_serv electron . --inspect\"",
-    "dist": "react-scripts build && build --em.main=build/electron.js",
-    "release": "react-scripts build && build --em.main=build/electron.js --publish always",
+    "dist": "react-scripts build && build -c.extraMetadata.main=build/electron.js",
+    "release": "react-scripts build && build -c.extraMetadata.main=build/electron.js --publish always",
     "postinstall": "electron-builder install-app-deps"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
     "devtron": "^1.4.0",
     "electron": "^1.7.11",
-    "electron-builder": "^19.56.0",
+    "electron-builder": "^20.0.8",
     "electron-devtools-installer": "^2.2.3",
     "electron-is-dev": "^0.3.0",
     "eslint": "^4.17.0",
