Add tracer calls to calculate returned ETH

--- a/public/main/defaultSettings.json
+++ b/public/main/defaultSettings.json
@@ -4,7 +4,8 @@
       "websocketApiUrl": "ws://parity.bloqrock.net:8546"
     },
     "defaultDerivationPath": "m/44'/60'/0'/0",
-    "indexerApiUrl": "http://api.indexer.bloqrock.net"
+    "indexerApiUrl": "http://api.indexer.bloqrock.net",
+    "tracerApiUrl": "http://tracer.bloqrock.net"
   },
   "coincap": {
     "ethPriceEmitRate": 5
