--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.17.1",
     "bignumber.js": "^6.0.0",
     "bip39": "^2.5.0",
+    "chalk": "^2.3.1",
     "coincap-lib": "^1.0.0",
     "credential-plus": "^2.0.5",
     "credential-plus-pbkdf2": "^2.0.1",
