--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "bignumber.js": "^6.0.0",
     "bip39": "^2.5.0",
     "coincap-lib": "^1.0.0",
+    "credential-plus": "^2.0.5",
+    "credential-plus-pbkdf2": "^2.0.1",
     "cross-env": "^5.1.3",
     "cuid": "^2.0.2",
     "debug": "^3.1.0",
