Change MTN for MET, and add empty license_en.txt

--- a/public/main/settings/defaultSettings.json
+++ b/public/main/settings/defaultSettings.json
@@ -21,7 +21,7 @@
     "0x4c00f8ec2d4fc3d9cbe4d7bd04d80780d5cae77f": {
       "decimals": 18,
       "name": "Metronome",
-      "symbol": "MTN"
+      "symbol": "MET"
     }
   },
   "settingsVersion": 1
