--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cuid": "^2.0.2",
     "debug": "^3.1.0",
     "dotenv": "^5.0.0",
+    "electron-context-menu": "^0.9.1",
     "electron-debug": "^1.5.0",
     "electron-log": "^2.2.14",
     "electron-settings": "^3.1.4",
