Cleanup debian build
Move deb source build to /usr/lib since /opt is strongly discouraged
by Debian.

Fix category in desktop entry.

Fix description in control file.

--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     },
     "linux": {
       "artifactName": "${name}_v${version}.${ext}",
-      "category": "Finance",
+      "category": "Office;Finance",
       "target": [
         "deb"
       ],
