--- a/ppa/app/debian/rules
+++ b/ppa/app/debian/rules
@@ -5,5 +5,8 @@
 
 override_dh_makeshlibs override_dh_perl:
 
+override_dh_install:
+	dh_install usr/share/ usr/
+	dh_install "opt/Metronome\ Wallet/" usr/lib/
 override_dh_link:
-	dh_link opt/Metronome\ Wallet/metronome-desktop-wallet usr/bin/metronome-desktop-wallet
+	dh_link usr/lib/Metronome\ Wallet/metronome-desktop-wallet usr/bin/metronome-desktop-wallet
