--- a/public/.eslintrc.json
+++ b/public/.eslintrc.json
@@ -8,5 +8,8 @@
   "rules": {
     "no-shadow": ["error", { "builtinGlobals": true }],
     "no-unused-vars": ["error", { "vars": "all", "args": "after-used" }]
+  },
+  "globals": {
+    "requireLib": false
   }
 }
