--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "safe-buffer": "^5.1.1",
     "socket.io-client": "^2.0.4",
     "styled-components": "^3.0.2",
+    "supports-color": "^5.3.0",
     "web3": "^1.0.0-beta.30"
   },
   "homepage": "./",
