--- a/public/.eslintrc.json
+++ b/public/.eslintrc.json
@@ -7,7 +7,8 @@
   "root": true,
   "rules": {
     "no-shadow": ["error", { "builtinGlobals": true }],
-    "no-unused-vars": ["error", { "vars": "all", "args": "after-used" }]
+    "no-unused-vars": ["error", { "vars": "all", "args": "after-used" }],
+    "no-use-before-define": ["error", { "functions": true, "variables": true }]
   },
   "globals": {
     "requireLib": false
