Add preview and confirmation steps to drawers
  - Added preview step to Converter, Auction and Send drawers
  - Moved password field to confirmation step
  - Added loading bar to “pending” step with optional message
  - Added “Failure” step with “Retry” button
  - Refactored amount fields for better code reuse
  - Refactored gas fields for better code reuse

Closes #10, Fixes #181

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,6 @@
 {
   "extends": ["plugin:react/recommended", "react-app", "standard", "prettier"],
   "rules": {
-    "no-shadow": ["error", { "builtinGlobals": true }],
-    "no-unused-vars": ["error", { "vars": "all", "args": "after-used" }]
+    "no-shadow": ["error"]
   }
 }
