Enfore strictier ESLint rules for the main process

--- a/public/.eslintrc.json
+++ b/public/.eslintrc.json
@@ -1,16 +1,25 @@
 {
   "env": {
-    "node": true,
-    "mocha": false
+    "es6": true,
+    "mocha": false,
+    "node": true
   },
-  "extends": ["standard", "prettier"],
+  "extends": ["standard"],
+  "globals": {
+    "requireLib": false
+  },
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": false
+    },
+    "ecmaVersion": 8,
+    "sourceType": "script"
+  },
   "root": true,
   "rules": {
     "no-shadow": ["error", { "builtinGlobals": true }],
-    "no-unused-vars": ["error", { "vars": "all", "args": "after-used" }],
-    "no-use-before-define": ["error", { "functions": true, "variables": true }]
-  },
-  "globals": {
-    "requireLib": false
+    "no-unused-vars": ["error", { "args": "after-used", "ignoreRestSiblings": true, "vars": "all" }],
+    "no-use-before-define": ["error", { "classes": true, "functions": true, "variables": true }],
+    "strict": ["error", "safe"]
   }
 }
