--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "moment-precise-range-plugin": "^1.3.0",
     "nedb": "^1.8.0",
     "node-notifier": "^5.2.1",
+    "p-retry": "^1.0.0",
     "promise-all-props": "^1.0.1",
     "qrcode.react": "^0.7.2",
     "raven": "^2.4.1",
