--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-scripts": "1.1.0",
     "react-toastify": "^3.3.2",
     "react-transition-group": "^2.2.1",
+    "react-virtualized": "^9.18.5",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "reselect": "^3.0.1",
