Migrate custom ESLint rules to bloq config

--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "electron-devtools-installer": "^2.2.3",
     "electron-is-dev": "^0.3.0",
     "eslint": "^4.17.0",
+    "eslint-config-bloq": "^1.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
