--- a/public/.eslintrc.json
+++ b/public/.eslintrc.json
@@ -1,10 +1,11 @@
 {
   "env": {
-    "es6": true,
     "mocha": false,
     "node": true
   },
-  "extends": ["standard"],
+  "extends": [
+    "bloq"
+  ],
   "globals": {
     "requireLib": false
   },
@@ -12,14 +13,7 @@
     "ecmaFeatures": {
       "jsx": false
     },
-    "ecmaVersion": 8,
-    "sourceType": "script"
+    "ecmaVersion": 2017
   },
-  "root": true,
-  "rules": {
-    "no-shadow": ["error", { "builtinGlobals": true }],
-    "no-unused-vars": ["error", { "args": "after-used", "ignoreRestSiblings": true, "vars": "all" }],
-    "no-use-before-define": ["error", { "classes": true, "functions": true, "variables": true }],
-    "strict": ["error", "safe"]
-  }
+  "root": true
 }
