--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "socket.io-client": "^2.0.4",
     "styled-components": "^3.0.2",
     "supports-color": "^5.3.0",
-    "web3": "^1.0.0-beta.30"
+    "web3": "1.0.0-beta.30"
   },
   "homepage": "./",
   "main": "public/electron.js",
