--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metronome-desktop-wallet",
-  "version": "0.7.0-beta",
+  "version": "0.6.0",
   "private": true,
   "author": {
     "name": "Bloq Labs",
