--- a/package.json
+++ b/package.json
@@ -149,9 +149,10 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
+    "expect": "^22.4.3",
     "prettier": "^1.10.2",
     "proxyquire": "^1.8.0",
-    "react-testing-library": "^1.6.0",
+    "react-testing-library": "^1.8.1",
     "wait-on": "^2.1.0"
   }
 }
