--- a/package.json
+++ b/package.json
@@ -141,13 +141,16 @@
     "electron-builder": "^20.5.1",
     "electron-devtools-installer": "^2.2.3",
     "electron-is-dev": "^0.3.0",
-    "eslint": "^4.17.0",
-    "eslint-config-bloq": "^1.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-bloq": "^1.2.2",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-jsdoc": "^3.5.0",
+    "eslint-plugin-mocha": "^5.0.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-prefer-arrow": "^1.1.1",
+    "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "expect": "^22.4.3",
     "prettier": "^1.10.2",
