Disable object rest/spread in linter

--- a/public/.eslintrc.json
+++ b/public/.eslintrc.json
@@ -11,6 +11,7 @@
   },
   "parserOptions": {
     "ecmaFeatures": {
+      "experimentalObjectRestSpread": false,
       "jsx": false
     },
     "ecmaVersion": 2017
