--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "moment-precise-range-plugin": "^1.3.0",
     "nedb": "^1.8.0",
     "node-notifier": "^5.2.1",
+    "p-defer": "^1.0.0",
     "p-retry": "^1.0.0",
     "promise-all-props": "^1.0.1",
     "qrcode.react": "^0.7.2",
